[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://meshes/kenney_spacecraft/corridor.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://music/306884_laser_tears_of_science_160.ogg" type="AudioStream" id=4]
[ext_resource path="res://resources/Vignette.tres" type="Material" id=5]
[ext_resource path="res://scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://scenes/SFXPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/AudioManager.gd" type="Script" id=8]
[ext_resource path="res://meshes/Cube.obj" type="ArrayMesh" id=9]
[ext_resource path="res://textures/WallMaterial.tres" type="Material" id=10]
[ext_resource path="res://resources/Raleway-Medium.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scripts/GroundItem.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 1, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
font_data = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[node name="Spatial" type="Spatial" groups=[
"game",
]]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 2.66913e-07, -1.86895e-07, 0, 0.573576, 0.819152, 3.25841e-07, 0.819152, -0.573576, 0, 20, -3 )

[node name="UI" type="Control" parent="Camera" groups=[
"ui",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="ProgressBar" parent="Camera/UI"]
anchor_left = 0.01
anchor_top = 0.97
anchor_right = 0.99
anchor_bottom = 1.0
margin_top = -0.0350342
custom_styles/fg = SubResource( 1 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowHPWarn" type="ColorRect" parent="Camera/UI"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.121569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextCentre" type="CenterContainer" parent="Camera/UI"]
anchor_right = 1.0
anchor_bottom = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Camera/UI/TextCentre"]
margin_left = 466.0
margin_top = 17.0
margin_right = 553.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "SCORE: 0"

[node name="ground" type="Spatial" parent="."]
visible = false

[node name="GroundItem" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.52875, 0, 13.7212 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem2" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0901, 0, 12.782 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem3" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.52292, 1.90735e-06, 10.3611 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem4" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8311, 0, 9.9616 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem5" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.30205, 0, 12.9768 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem6" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1108, 0, 13.4602 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem7" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.639, 0, -0.576 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem8" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1138, -1.90735e-06, 12.4676 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="GroundItem9" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.05393, 0, 10.2467 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
script = ExtResource( 13 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "MUSIC"

[node name="AudioManager" type="Node" parent="." groups=[
"audio",
]]
script = ExtResource( 8 )

[node name="AudioStreamPlayer" parent="AudioManager" instance=ExtResource( 7 )]

[node name="walls" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00118637, 2.38419e-07, -0.022418 )

[node name="WallLeft" type="MeshInstance" parent="walls"]
transform = Transform( 0.2, 0, 0, 0, 50, 0, 0, 0, 200, -17, 0, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )

[node name="WallRight" type="MeshInstance" parent="walls"]
transform = Transform( 0.2, 0, 0, 0, 50, 0, 0, 0, 200, 17, 0, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )

[node name="Floor" type="MeshInstance" parent="walls"]
transform = Transform( 50, 0, 0, 0, 0.1, 0, 0, 0, 200, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = SubResource( 3 )
